# deal-finder-brazil

./: .gitignore  Makefile  README.md  disclaimer.md  pyproject.toml  search.py
test-data/: web-page.html
