[tool.poetry]
name = "deal-finder-brazil"
version = "0.1.0"
description = "Deal finder in Brazil"
authors = ["Simone Poggiali <gibbok.coding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
